Arthur: Sing in Css completa

--- a/codigo/src/pages/singin/index.html
+++ b/codigo/src/pages/singin/index.html
@@ -110,7 +110,10 @@
             <div class="gap-2" id="divition-section"><p>ou</p></div>
 
             <!-- Google Sing In -->
-            <button id="google-sing-in">Google</button>
+            <button class="inputs center" id="google-sing-in">
+                <img src="../../assets/GoogleIcon.svg" alt="Logo do Google">
+                Entre com o Google
+            </button>
 
         </section>
     </main>
