First website depoy

--- a/codigo/src/index.html
+++ b/codigo/src/index.html
@@ -10,9 +10,9 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile.css">
-    <link rel="stylesheet" href="desktop.css">
+    <link rel="stylesheet" href="/pages/singin/style.css">
+    <link rel="stylesheet" href="/pages/singin/mobile.css">
+    <link rel="stylesheet" href="/pages/singin/desktop.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
     <title>Sing in | DinDin</title>
@@ -118,7 +118,7 @@
             <!-- Re-direct -->
             <p class="gap-1" id="link-to-singup">
                 Novo por aqui?
-                <a href="../singup/index.html">Crie uma conta</a>
+                <a href="/pages/singup/index.html">Crie uma conta</a>
             </p>
 
         </section>
