--- a/codigo/src/pages/singup/index.html
+++ b/codigo/src/pages/singup/index.html
@@ -123,7 +123,7 @@
             <!-- Re-direct -->
             <p class="gap-1" id="link-to-singup">
                 Já possui uma conta? 
-                <a href="../singin/index.html">Faça o login.</a>
+                <a href="../../index.html">Faça o login.</a>
             </p>
 
         </section>
