--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mobile.css">
-    <link rel="stylesheet" href="desktop.css">
+    <link rel="stylesheet" href="./pages/singin/style.css">
+    <link rel="stylesheet" href="./pages/singin/mobile.css">
+    <link rel="stylesheet" href="./pages/singin/desktop.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
-    <title>Sing up | DinDin</title>
+    <title>Sing in | DinDin</title>
 </head>
 <body>
     <aside id="banner-container">
@@ -84,17 +84,12 @@
                 
             <!-- Greetings -->
             <div class="gap-2">
-                <h2>Novo por aqui? Seja bem vindo!</h2>
-                <p id="greetings-sub-text">Por favor, Insira seus dados para criar sua conta.</p>
+                <h2>Bem vindo de volta!</h2>
+                <p id="greetings-sub-text">Por favor, Insira seus dados.</p>
             </div>
 
             <!-- Form Sing In -->
             <form>
-                <div class="gap-1 flex-column">
-                    <label class="input-label" for="name">Nome Completo</label>
-                    <input class="inputs" id="name" type="text" placeholder="Introduza seu nome completo...">
-                </div>
-
                 <div class="gap-1 flex-column">
                     <label class="input-label" for="email">Email</label>
                     <input class="inputs" id="email" type="text" placeholder="Introduza seu e-mail...">
@@ -106,8 +101,8 @@
                 </div>
 
                 <button class="inputs center" id="singin-button" >
-                    <img src="../../assets/singinlogo.svg" alt="Entrar " >
-                    Criar conta
+                    <img src="./assets/singinlogo.svg" alt="Entrar " >
+                    Entrar
                 </button>
             </form>
 
@@ -116,17 +111,19 @@
 
             <!-- Google Sing In -->
             <button class="inputs center" id="google-sing-in">
-                <img src="../../assets/GoogleIcon.svg" alt="Logo do Google">
+                <img src="./assets/GoogleIcon.svg" alt="Logo do Google">
                 Entre com o Google
             </button>
 
             <!-- Re-direct -->
             <p class="gap-1" id="link-to-singup">
-                Já possui uma conta? 
-                <a href="../../index.html">Faça o login.</a>
+                Novo por aqui?
+                <a href="./pages/singup/index.html">Crie uma conta</a>
             </p>
 
         </section>
     </main>
+
+    <script src="./pages/singin/script.js"></script>
 </body>
 </html>
