--- a/src/index.html
+++ b/src/index.html
@@ -92,15 +92,15 @@
             <form>
                 <div class="gap-1 flex-column">
                     <label class="input-label" for="email">Email</label>
-                    <input class="inputs" id="email" type="text" placeholder="Introduza seu e-mail...">
+                    <input onchange="getUserEmail()" id="email" class="inputs" id="email" type="text" placeholder="Introduza seu e-mail...">
                 </div>
 
                 <div class="gap-1 flex-column">
                     <label class="input-label" for="password">Senha</label>
-                    <input class="inputs" id="password" type="password" placeholder="Digite a sua senha...">
+                    <input onchange="getUserPassword()" class="inputs" id="password" type="password" placeholder="Digite a sua senha...">
                 </div>
 
-                <button class="inputs center" id="singin-button" >
+                <button onclick="handleLogin(event)" class="inputs center" id="singin-button" >
                     <img src="./assets/singinlogo.svg" alt="Entrar " >
                     Entrar
                 </button>
