--- a/src/pages/singup/index.html
+++ b/src/pages/singup/index.html
@@ -105,7 +105,7 @@
                     <input onchange="getUserPassword()"  class="inputs" id="password" type="password" placeholder="Digite a sua senha...">
                 </div>
 
-                <button onclick="createUser(event)" class="inputs center" id="singin-button" >
+                <button onclick="handleCreateUser(event)" class="inputs center" id="singin-button" >
                     <img src="../../assets/singinlogo.svg" alt="Entrar " >
                     Criar conta
                 </button>
