Fix: mobile view

--- a/src/pages/overview/index.html
+++ b/src/pages/overview/index.html
@@ -18,9 +18,9 @@
 <body>
     <aside id="aside" class="close-menu">
         <div>
-            <img src="../../assets/img/logo-nome.png" alt="logo" /> 
+            <img id="logo" src="../../assets/img/logo-nome.png" alt="logo" /> 
             <button id="closeMenu" onclick="closeMenu()">
-                <img src="../../assets/close.svg" alt="fechar menu" />
+                <img class="menu-icon" src="../../assets/close.svg" alt="fechar menu" />
             </button>
         </div>
         <nav>
@@ -44,7 +44,7 @@
     </aside>
     <main>
         <button id="openMenu" onclick="openMenu()">
-            <img src="../../assets/bars.svg" alt="abrir Menu" /> 
+            <img class="menu-icon" src="../../assets/bars.svg" alt="abrir Menu" /> 
         </button>
     </main>
 
