Add: Investiments page semi-completed

--- a/src/pages/investiments/index.html
+++ b/src/pages/investiments/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="mobile.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> 
-    <title>Visão Geral | Dindin</title>
+    <title>Investimentos | Dindin</title>
 </head>
 <body>
     <aside id="aside" class="close-menu">
@@ -24,12 +24,12 @@
             </button>
         </div>
         <nav>
-            <a id="active-menu" class="aling-end gap-2" href="#">
-                <img src="../../assets/img/active/homeIcon.png" alt="Visão Geral" />
+            <a class="aling-end gap-2" href="../overview/index.html">
+                <img src="../../assets/img/homeIcon.png" alt="Visão Geral" />
                 <p>Visão Geral</p>
             </a>
-            <a class="aling-end gap-2" href="../investiments/index.html">
-                <img src="../../assets/img/chartIcon.png" alt="Investimentos" />
+            <a id="active-menu" class="aling-end gap-2" href="#">
+                <img src="../../assets/img/active/chartIcon.png" alt="Investimentos" />
                 <p>Investimentos</p>
             </a>
             <a class="aling-end gap-2" href="#">
@@ -49,7 +49,7 @@
             </button>
 
             <h1>
-                Visão Geral
+                Investimentos
             </h1>
 
             <a href="#" id="user-avatar">
