Add: mobile investiments page completed

--- a/src/pages/investiments/index.html
+++ b/src/pages/investiments/index.html
@@ -61,6 +61,30 @@
                 <img src="../../assets/img/user-image.png" alt="Imagem do Usuário">
             </a>
         </header>
+        <section id="investiments-returns">
+            <div class="return-cards">
+                <img src="../../assets/img/green-return.png" alt="Total de lucro">
+                <div>
+                    <p>TOTAL DE LUCRO</p>
+                    <span id="card-return">R$ 12.000,00</span>
+                </div>
+            </div>
+            <div class="return-cards">
+                <img src="../../assets/img/red-return.png" alt="Total de prejuízo">
+                <div>
+                    <p>TOTAL DE PREJUÍZO</p>
+                    <span id="card-return">R$ 2.000,00</span>
+                </div>
+            </div>
+            <div class="return-cards">
+                <img src="../../assets/img/total-return.png" alt="Total de retorno">
+                <div>
+                    <p>TOTAL DE RETORNO</p>
+                    <span id="total-return">R$ 10.000,00</span>
+                </div>
+            </div>
+            
+        </section>
     </main>
 
     <script src="./script.js"></script>
