Add: mobile user page

--- a/src/pages/overview/index.html
+++ b/src/pages/overview/index.html
@@ -36,7 +36,7 @@
                 <img src="../../assets/img/cardIcon.png" alt="Fluxo de Caixa" />
                 <p>Fluxo de Caixa</p>
             </a>
-            <a class="aling-end gap-2" href="#">
+            <a class="aling-end gap-2" href="../user/index.html">
                 <img src="../../assets/img/user.png" alt="Usuário" width="24" height="24"/>
                 <p>Usuário</p>
             </a>
@@ -52,7 +52,7 @@
                 Visão Geral
             </h1>
 
-            <a href="#" id="user-avatar">
+            <a href="../user/index.html" id="user-avatar">
                 <div>
                     <p>Roberto Doe</p>
                     <span>robertodoe@gmail.com</sp>
