Add: balance page mobile and desktop completed

--- a/src/pages/investiments/index.html
+++ b/src/pages/investiments/index.html
@@ -24,7 +24,7 @@
             </button>
         </div>
         <nav>
-            <a class="aling-end gap-2" href="../overview/index.html">
+            <a class="aling-end gap-2" href="../overview/">
                 <img src="../../assets/img/homeIcon.png" alt="Visão Geral" />
                 <p>Visão Geral</p>
             </a>
@@ -32,11 +32,11 @@
                 <img src="../../assets/img/active/chartIcon.png" alt="Investimentos" />
                 <p>Investimentos</p>
             </a>
-            <a class="aling-end gap-2" href="#">
+            <a class="aling-end gap-2" href="../balance/">
                 <img src="../../assets/img/cardIcon.png" alt="Fluxo de Caixa" />
                 <p>Fluxo de Caixa</p>
             </a>
-            <a class="aling-end gap-2" href="../user/index.html">
+            <a class="aling-end gap-2" href="../user/">
                 <img src="../../assets/img/user.png" alt="Usuário" width="24" height="24"/>
                 <p>Usuário</p>
             </a>
@@ -52,7 +52,7 @@
                 Investimentos
             </h1>
 
-            <a href="../user/index.html" id="user-avatar">
+            <a href="../user/" id="user-avatar">
                 <div>
                     <p>Roberto Doe</p>
                     <span>robertodoe@gmail.com</sp>
