--- a/src/pages/user/index.html
+++ b/src/pages/user/index.html
@@ -24,15 +24,15 @@
             </button>
         </div>
         <nav>
-            <a class="aling-end gap-2" href="../overview/index.html">
+            <a class="aling-end gap-2" href="../overview/">
                 <img src="../../assets/img/homeIcon.png" alt="Visão Geral" />
                 <p>Visão Geral</p>
             </a>
-            <a class="aling-end gap-2" href="../investiments/index.html">
+            <a class="aling-end gap-2" href="../investiments/">
                 <img src="../../assets/img/chartIcon.png" alt="Investimentos" />
                 <p>Investimentos</p>
             </a>
-            <a class="aling-end gap-2" href="#">
+            <a class="aling-end gap-2" href="../balance/">
                 <img src="../../assets/img/cardIcon.png" alt="Fluxo de Caixa" />
                 <p>Fluxo de Caixa</p>
             </a>
