--- a/src/pages/balance/index.html
+++ b/src/pages/balance/index.html
@@ -156,6 +156,33 @@
                 </table>
             </div>
         </section>
+        <section id="modal-container">
+            <div id="modal-content">
+                <form>
+                    <div class="user-inputs">
+                        <label for="name=">Nome</label>
+                        <input type="text" id="name" placeholder="Roberto Doe">
+                    </div>
+                    <div class="user-inputs">
+                        <label for="cellphone=">Telefone</label>
+                        <input type="text" id="cellphone" placeholder="(31) 99 9999-9999">
+                    </div>
+                    <div class="user-inputs">
+                        <label for="salary=">Sálario</label>
+                        <input type="number" id="salary" placeholder="4500">
+                    </div>
+                    <div class="user-inputs">
+                        <label for="objective">Objetivo</label>
+                        <input type="text" id="objective" placeholder="Independência financeira">
+                    </div>
+                    <div class="user-inputs">
+                        <label for="Email=">Email</label>
+                        <input type="text" id="Email" placeholder=" robertodoe@gmail.com ">
+                    </div>
+                    <button>Enviar</button>
+                </form>
+            </div>
+        </section>
     </main>
 
     <script src="./script.js"></script>
