--- a/src/pages/balance/index.html
+++ b/src/pages/balance/index.html
@@ -77,7 +77,7 @@
                     <option value="Novembro">Novembro</option>
                     <option value="December">Dezembro</option>
                 </select>
-                <button class="balance-buttons">Nova Transação</button>
+                <button class="balance-buttons" onclick="openModal()">Nova Transação</button>
             </div>
             <div id="investiments-returns">
                 <div class="return-cards">
@@ -156,30 +156,36 @@
                 </table>
             </div>
         </section>
-        <section id="modal-container">
+        <section id="modal" class="close-modal">
             <div id="modal-content">
+                <button id="closeModal" onclick="closeModal()">
+                    <img class="menu-icon" src="../../assets/close.svg" alt="fechar menu" />
+                </button>
+
                 <form>
-                    <div class="user-inputs">
-                        <label for="name=">Nome</label>
-                        <input type="text" id="name" placeholder="Roberto Doe">
+                    <div class="modal-inputs">
+                        <label for="title">Titulo</label>
+                        <input type="text" id="title" placeholder="Supermercado">
                     </div>
-                    <div class="user-inputs">
-                        <label for="cellphone=">Telefone</label>
-                        <input type="text" id="cellphone" placeholder="(31) 99 9999-9999">
+                    <div class="modal-inputs">
+                        <label for="price">Valor</label>
+                        <input type="number" id="price" placeholder="R$ 0,00">
                     </div>
-                    <div class="user-inputs">
-                        <label for="salary=">Sálario</label>
-                        <input type="number" id="salary" placeholder="4500">
+                    <div class="modal-inputs" >
+                        <label for="category">Categoria</label>
+                        <select class="modal-select" name="category" id="category" placeholder="Categoria">
+                            <option value="deposit">Entrada</option>
+                            <option value="withdraw">Saida</option>
+                        </select>
                     </div>
-                    <div class="user-inputs">
-                        <label for="objective">Objetivo</label>
-                        <input type="text" id="objective" placeholder="Independência financeira">
+                    <div class="modal-inputs" >
+                        <label for="type">Tipo</label>
+                        <select class="modal-select" name="type" id="type" placeholder="Tipo">
+                            <option value="fixed">Fixa</option>
+                            <option value="variable">Variavél</option>
+                        </select>
                     </div>
-                    <div class="user-inputs">
-                        <label for="Email=">Email</label>
-                        <input type="text" id="Email" placeholder=" robertodoe@gmail.com ">
-                    </div>
-                    <button>Enviar</button>
+                    <button id="modal-button">Enviar</button>
                 </form>
             </div>
         </section>
