Add: Updating table content

--- a/src/pages/balance/index.html
+++ b/src/pages/balance/index.html
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div id="table-container">
-                <table>
+                <table id="table-content">
                     <tr id="table-heads">
                         <th>TÍTULO</th>
                         <th>VALOR</th>
