Add: adding new table content with the modal

--- a/src/pages/balance/index.html
+++ b/src/pages/balance/index.html
@@ -111,48 +111,6 @@
                         <th>TIPO</th>
                         <th>DATA</th>
                     </tr>
-                    <tr >
-                        <td>Saída com os amigos</td>
-                        <td>R$300,00</td>
-                        <td>Saída</td>
-                        <td>Variável</td>
-                        <td>12/03/2022</td>
-                    </tr>
-                    <tr >
-                        <td>Viagem</td>
-                        <td>R$3000,00</td>
-                        <td>Saída</td>
-                        <td>Variável</td>
-                        <td>16/03/2022</td>
-                    </tr>
-                    <tr >
-                        <td>Freelance</td>
-                        <td>R$1500,00</td>
-                        <td>Entrada</td>
-                        <td>Variável</td>
-                        <td>19/03/2022</td>
-                    </tr>
-                    <tr >
-                        <td>Supermercado</td>
-                        <td>R$500,00</td>
-                        <td>Saída</td>
-                        <td>Fixa</td>
-                        <td>22/03/2022</td>
-                    </tr>
-                    <tr >
-                        <td>Conta de luz e água</td>
-                        <td>R$350,00</td>
-                        <td>Saída</td>
-                        <td>Fixa</td>
-                        <td>27/03/2022</td>
-                    </tr>
-                    <tr >
-                        <td>Sálario</td>
-                        <td>R$5000,00</td>
-                        <td>Entrada</td>
-                        <td>Fixa</td>
-                        <td>30/03/2022</td>
-                    </tr>
                 </table>
             </div>
         </section>
@@ -189,7 +147,7 @@
                             <option value="variable">Variavél</option>
                         </select>
                     </div>
-                    <button id="modal-button" onclick="getModalInfo(event)">Enviar</button>
+                    <button id="modal-button" onclick="handleModalInfo(event)">Enviar</button>
                 </form>
             </div>
         </section>
