Add: deposit, withdraw and return card

--- a/src/pages/balance/index.html
+++ b/src/pages/balance/index.html
@@ -80,21 +80,21 @@
                 <button class="balance-buttons" onclick="openModal()">Nova Transação</button>
             </div>
             <div id="investiments-returns">
-                <div class="return-cards">
+                <div class="cards-container">
                     <img src="../../assets/img/green-return.png" alt="Total de lucro">
                     <div>
                         <p>ENTRADAS</p>
-                        <span id="card-return">R$ 6.500,00</span>
+                        <span id="deposit-card" class="card-return">R$ 6.500,00</span>
                     </div>
                 </div>
-                <div class="return-cards">
+                <div class="cards-container">
                     <img src="../../assets/img/red-return.png" alt="Total de prejuízo">
                     <div>
                         <p>SAÍDAS</p>
-                        <span id="card-return">R$ 4.150,00</span>
+                        <span id="withdraw-card" class="card-return">R$ 4.150,00</span>
                     </div>
                 </div>
-                <div class="return-cards">
+                <div class="cards-container">
                     <img src="../../assets/img/total-return.png" alt="Total de retorno">
                     <div>
                         <p>SALDO</p>
