feat: user wish item

--- a/src/pages/balance/index.html
+++ b/src/pages/balance/index.html
@@ -79,6 +79,8 @@
                 </select>
                 <button class="balance-buttons" onclick="openModal()">Nova Transação</button>
             </div>
+
+            <!-- Investments Returns -->
             <div id="investiments-returns">
                 <div class="cards-container">
                     <img src="../../assets/img/green-return.png" alt="Total de lucro">
@@ -102,6 +104,8 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Table -->
             <div id="table-container">
                 <table id="table-content">
                     <tr id="table-heads">
@@ -114,6 +118,8 @@
                 </table>
             </div>
         </section>
+
+        <!-- Modal -->
         <section id="modal" class="close-modal">
             <div id="modal-content">
                 <button id="closeModal" onclick="closeModal()">
