--- a/src/pages/overview/index.html
+++ b/src/pages/overview/index.html
@@ -61,6 +61,55 @@
                 <img src="../../assets/img/user-image.png" alt="Imagem do Usuário">
             </a>
         </header>
+
+        <!-- User's Wish -->
+        <section class="user-wish-container">
+            <div class="user-wish-content">
+                <div class="user-wish-add">
+                    <h3>Adicionar desejo</h3>
+                    <button onclick="openModal()"><img src="../../assets/img/addIcon.png" alt="Add Icon"></button>
+                </div>
+                <div id="user-wish-list">
+                    <div class="user-wish-list-item">
+                        <div>
+                            <p>Gasolina</p>
+                            <p>R$ 550</p>
+                        </div>
+                        <p>Este item vale <strong>9.41</strong> horas do seu trabalho.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Modal -->
+        <section id="modal" class="close-modal">
+            <div id="modal-content">
+                <button id="closeModal" onclick="closeModal()">
+                    <img class="menu-icon" src="../../assets/close.svg" alt="fechar menu" />
+                </button>
+                <form>
+                    <div class="modal-inputs">
+                        <label for="title">Nome do desejo</label>
+                        <input type="text" id="title" placeholder="Gasolina">
+                    </div>
+                    <div class="modal-inputs">
+                        <label for="price">Preço</label>
+                        <input type="number" id="price" placeholder="R$ 500,00">
+                    </div>
+                    <div class="modal-inputs">
+                        <label for="salary">Salario</label>
+                        <input type="number" id="salary" placeholder="R$ 5000,00">
+                    </div>
+                    <div class="modal-inputs">
+                        <label for="time-at-work">Horas trabalhadas</label>
+                        <input type="number" id="time-at-work" placeholder="40h por semana">
+                    </div>
+                    <button id="modal-button" onclick="handleModalInfo(event)">Enviar</button>
+                </form>
+            </div>
+        </section>
+
+
     </main>
 
     <script src="./script.js"></script>
