--- a/src/pages/user/index.html
+++ b/src/pages/user/index.html
@@ -54,8 +54,8 @@
 
             <a href="#" id="user-avatar">
                 <div>
-                    <p>Roberto Doe</p>
-                    <span>robertodoe@gmail.com</sp>
+                    <p id="user-name-avatar">Roberto Doe</p>
+                    <span id="user-email-avatar">robertodoe@gmail.com</sp>
                 </div>
                 <div id="separator"></div>
                 <img src="../../assets/img/user-image.png" alt="Imagem do Usuário">
@@ -70,41 +70,89 @@
                         <span>robertodoe@gmail.com</sp>
                     </div>
                 </div>
+
+                <!-- User information -->
+
                 <div class="user-info-text">
-                    <p>Telefone</p>
-                    <span>(31) 99 9999-9999</span>
+                    <p>CPF</p>
+                    <span>28.678.098-12</span>
                 </div>
                 <div class="user-info-text">
-                    <p>Sálario</p>
-                    <span>R$ 4.500,00</span>
+                    <p>Username</p>
+                    <span id="name-info">Roberto Doe</span>
+                </div>
+                <div class="user-info-text">
+                    <p>Email</p>
+                    <span id="email-info">robertodoe@gmail.com</span>
+                </div>
+                <div class="user-info-text">
+                    <p>Senha</p>
+                    <span id="password-info">*********</span>
+                </div>
+                <div class="user-info-text">
+                    <p>Data de Nascimento</p>
+                    <span id="birthday-info">1/1/1992</span>
+                </div>
+                <div class="user-info-text">
+                    <p>Sexo</p>
+                    <span id="sex-info">Masculino</span>
+                </div>
+                <div class="user-info-text">
+                    <p>Telefone</p>
+                    <span id="cellphone-info">+55(31)99 9999-9999</span>
                 </div>
                 <div class="user-info-text">
                     <p>Objetivo</p>
-                    <span>independência financeira</span>
+                    <span id="objective-info">independência financeira</span>
+                </div>
+                <div class="user-info-text">
+                    <p>Profissão</p>
+                    <span id="job-info">Médico</span>
+                </div>
+                <div class="user-info-text">
+                    <p>Sálario</p>
+                    <span id="salary-info">R$ 15.000,00</span>
                 </div>
             </div>
             <div id="user-separator"></div>
             <form>
                 <div class="user-inputs">
-                    <label for="name=">Nome</label>
+                    <label for="cpf">CPF</label>
+                    <input type="text" id="cpf" placeholder="28.678.098-12" disabled>
+                </div>
+                <div class="user-inputs">
+                    <label for="name">Username</label>
                     <input type="text" id="name" placeholder="Roberto Doe">
                 </div>
                 <div class="user-inputs">
-                    <label for="cellphone=">Telefone</label>
-                    <input type="text" id="cellphone" placeholder="(31) 99 9999-9999">
+                    <label for="email">Email</label>
+                    <input type="text" id="email" placeholder="robertodoe@gmail.com">
                 </div>
                 <div class="user-inputs">
-                    <label for="salary=">Sálario</label>
-                    <input type="number" id="salary" placeholder="4500">
+                    <label for="password">Senha</label>
+                    <input type="password" id="password" placeholder=" ************* ">
+                </div>
+                <div class="user-inputs">
+                    <label for="birthday">Data de nascimento</label>
+                    <input type="date" id="birthday">
+                </div>
+                <div class="user-inputs">
+                    <label for="sex">Sexo</label>
+                    <input type="text" id="sex" placeholder="Masculino">
+                </div>
+                <div class="user-inputs">
+                    <label for="cellphone">Telefone</label>
+                    <input type="text" id="cellphone" placeholder="+55(31)99 9999-9999">
                 </div>
                 <div class="user-inputs">
                     <label for="objective">Objetivo</label>
                     <input type="text" id="objective" placeholder="Independência financeira">
                 </div>
                 <div class="user-inputs">
-                    <label for="Email=">Email</label>
-                    <input type="text" id="Email" placeholder=" robertodoe@gmail.com ">
+                    <label for="salary">Sálario</label>
+                    <input type="number" id="salary" placeholder="4500">
                 </div>
+                <button onclick="handleChangeUserData(event)">Salvar dados</button>
             </form>
         </section>
     </main>
